Main Page alligned evenly

--- a/FE/src/component/Basics/mainpage.css
+++ b/FE/src/component/Basics/mainpage.css
@@ -1,4 +1,10 @@
 
+.placeevenly {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: auto auto auto auto;
+  padding: 10px;
+}
 
 .card {
     /* Add shadows to create the "card" effect */
