--- a/FE/src/component/Basics/style.css
+++ b/FE/src/component/Basics/style.css
@@ -94,7 +94,7 @@ input {
 	width: 100%;
 }
 
-.containerloginpage {
+.container {
 	background-color: #fff;
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
