--- a/FE/src/component/Basics/calendar.css
+++ b/FE/src/component/Basics/calendar.css
@@ -1,9 +1,9 @@
 .bodycalendar {
 	/* display: grid;
 	justify-content: center;
-	align-items: center;
-	height: 100vh; */
-	/* margin: -20px 0 50px; */
+	align-items: center; */
+	height: 400px;
+	margin: 40px 50px 50px;
   display: grid;
   justify-content: center;
   grid-template-columns: auto;
@@ -11,7 +11,7 @@
 }
 
 .react-calendar {
-    width: 1000px;
+    width: 600px;
     max-width: 100%;
     background: white;
     /* border: 1px solid #a0a096; */
@@ -38,7 +38,7 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    font-size: large;
+    font-size: small;
   }
   .react-calendar button {
     margin: 0;
@@ -51,11 +51,11 @@
   }
   .react-calendar__navigation {
     display: flex;
-    height: 70px;
+    height: 50px;
     margin-bottom: 1em;
   }
   .react-calendar__navigation button {
-    min-width: 80px;
+    min-width: 40px;
     background: none;
     font-weight: bold;
   }
@@ -97,7 +97,7 @@
     padding: 10px 6.6667px;
     background: none;
     text-align: center;
-    line-height: 80px;
+    line-height: 40px;
     font-size: medium;
   }
   .react-calendar__tile:disabled {
