--- a/FE/src/component/Basics/mainpage.css
+++ b/FE/src/component/Basics/mainpage.css
@@ -10,7 +10,8 @@
     /* Add shadows to create the "card" effect */
     box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2);
     transition: 0.15s;
-    width: 300px;
+    width: 250px;
+    height: 400px;
     display: inline-block;
     margin: 20px;
     /* background-color: #1d094b; */
